# Terra

./: .clang-format  .clang-format-include  .clang-tidy  .gitignore  LICENSE  meson.build
src/Terra/: Common.h  Terra.h  meson.build
src/Terra/Core/: Application.cpp  Application.h  EntryPoint.h  Window.cpp  Window.h  WindowProperties.h
src/Terra/Core/Logging/: Logger.cpp  Logger.h
src/Terra/Events/: Event.h  EventCategory.h  EventDispatcher.h  EventHub.cpp  EventHub.h  EventType.h
src/Terra/Events/Application/: WindowResizeEvent.h
src/Terra/Events/Input/Keyboard/: KeyEvent.h  KeyPressedEvent.h  KeyReleasedEvent.h
src/Terra/Platform/Windows/: Window.h  WindowData.h
src/Testbed/: meson.build  testbed.cpp
subprojects/: spdlog.wrap
tests/: meson.build
tests/Terra/: EventTests.cpp  Tests.cpp  test.cpp
